# bgpsim

./: .gitignore  README.md  bgpsim.py  pyproject.toml  pyrightconfig.json  requirements.txt
examples/: simple.py
tests/: bench_bgpsim.py  test_bgpsim.py
